k3s/native/gateway/kubevirt-manager-httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - "kubevirt.m1c1b.home"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: kubevirt-manager-basic-auth
      backendRefs:
        - name: kubevirt-manager
          port: 8080
